contributions to blog post

--- a/WR.ipynb
+++ b/WR.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +527,7 @@
        "[743 rows x 29 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +562,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -751,102 +742,32 @@
        "      <td>9.995540</td>\n",
        "      <td>10.1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Tee Higgins</td>\n",
-       "      <td>9.891824</td>\n",
-       "      <td>9.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Terry McLaurin</td>\n",
-       "      <td>9.859440</td>\n",
-       "      <td>8.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>DeVonta Smith</td>\n",
-       "      <td>9.817522</td>\n",
-       "      <td>9.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Amari Cooper</td>\n",
-       "      <td>9.794233</td>\n",
-       "      <td>9.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Christian Watson</td>\n",
-       "      <td>9.686061</td>\n",
-       "      <td>8.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>George Pickens</td>\n",
-       "      <td>9.664543</td>\n",
-       "      <td>6.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Garrett Wilson</td>\n",
-       "      <td>9.483186</td>\n",
-       "      <td>7.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Christian Kirk</td>\n",
-       "      <td>9.461563</td>\n",
-       "      <td>9.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Tyler Lockett</td>\n",
-       "      <td>9.442380</td>\n",
-       "      <td>9.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>DK Metcalf</td>\n",
-       "      <td>9.330398</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Player  2023_pred  2022_ppg\n",
-       "0    Justin Jefferson  13.696278      14.2\n",
-       "1         Tyreek Hill  13.194079      13.1\n",
-       "2       Davante Adams  12.073103      13.9\n",
-       "3          A.J. Brown  11.700374      12.4\n",
-       "4        Stefon Diggs  11.648549      12.4\n",
-       "5       Ja'Marr Chase  11.009750      12.0\n",
-       "6         CeeDee Lamb  10.921314      11.4\n",
-       "7          Mike Evans  10.718752       9.9\n",
-       "8       Jaylen Waddle  10.699261      10.8\n",
-       "9   Amon-Ra St. Brown   9.995540      10.1\n",
-       "10        Tee Higgins   9.891824       9.9\n",
-       "11     Terry McLaurin   9.859440       8.9\n",
-       "12      DeVonta Smith   9.817522       9.4\n",
-       "13       Amari Cooper   9.794233       9.9\n",
-       "14   Christian Watson   9.686061       8.8\n",
-       "15     George Pickens   9.664543       6.7\n",
-       "16     Garrett Wilson   9.483186       7.8\n",
-       "17     Christian Kirk   9.461563       9.3\n",
-       "18      Tyler Lockett   9.442380       9.6\n",
-       "19         DK Metcalf   9.330398       8.0"
+       "              Player  2023_pred  2022_ppg\n",
+       "0   Justin Jefferson  13.696278      14.2\n",
+       "1        Tyreek Hill  13.194079      13.1\n",
+       "2      Davante Adams  12.073103      13.9\n",
+       "3         A.J. Brown  11.700374      12.4\n",
+       "4       Stefon Diggs  11.648549      12.4\n",
+       "5      Ja'Marr Chase  11.009750      12.0\n",
+       "6        CeeDee Lamb  10.921314      11.4\n",
+       "7         Mike Evans  10.718752       9.9\n",
+       "8      Jaylen Waddle  10.699261      10.8\n",
+       "9  Amon-Ra St. Brown   9.995540      10.1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sorted_2023 = pred_df.sort_values(by='2023_pred', ascending=False).reset_index(drop=True)\n",
-    "sorted_2023.head(20)"
+    "sorted_2023.head(10)"
    ]
   },
   {
