--- a/blog_post.ipynb
+++ b/blog_post.ipynb
@@ -554,7 +554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sources below"
+    "### Sources below * delete when bib is working"
    ]
   },
   {
