--- a/blog_post.ipynb
+++ b/blog_post.ipynb
@@ -471,9 +471,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "* TODO\n",
-    "\n",
     "Your conclusion is the right time to assess:\n",
     "\n",
     "In what ways did our project work?\n",
@@ -483,6 +480,14 @@
     "How do our results compare to the results of others who have also studied similar problems?\n",
     "\n",
     "If we had more time, data, or computational resources, what might we do differently in order to improve further?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We were very happy with the results of our project. We set out to create a model that would allow us to predict fantasy football performance in the future and we were able to accomplish just that. Because of the way we set up our code and the way we scrape data and train our model, it will be very easy to alter our code in future years and allows us to predict future results. We unfortunately have not had time to compare our model with those of major fantasy football platforms, but we are happy enough with our results that we are all comfortable taking our work and applying it to our own fantasy football leagues. If we had time, we would try to add in even more features to train on and we would also add in more ways to test the effectiveness of our model. Overall, we are really happy with what we were able to put out and look forward to continuing work in the future."
    ]
   },
   {
