Dean writing blog post

--- a/blog_post.ipynb
+++ b/blog_post.ipynb
@@ -422,16 +422,12 @@
     "\n",
     "##### Modeling\n",
     "\n",
-    "* TODO - talk about modeling function, what it returns, which models we used\n",
-    "\n",
-    "Next, we performed our modeling.\n",
+    "Next, we performed our modeling. For each position, we tested 8 models on each positions training data and used the one that performed the best. These models included a Linear Regression model, a SGDRegressor model, a Ridge model, a Lasso model, a Decision Tree model, a Random Forest model, a SVR model, and a Multi-Layered Perceptron model. After training, this model was then returned to evaluate the validation data for each position. Once tested, our models were then used to predict fantasy scores for our testing data of the year 2021-2022.\n",
     "\n",
     "\n",
     "##### Performance evaluation\n",
     "\n",
-    "* TODO - talk about metrics\n",
-    "\n",
-    "How you evaluated your models (loss, accuracy, etc), and the size of your test set.\n",
+    "In our model selection we used MSE as our metric to pick the best model for each position. The MSE for each position varied due to each position having a different average for score. For example, QB's score the most amount of points in fantasy football whereas TE's score the least amount of points (besides kickers and defense). In this way, the MSE for QB's was naturally higher than that of TE's and this trend was prominent for all positions.\n",
     "\n"
    ]
   },
@@ -449,12 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* TODO\n",
-    "\n",
-    "\n",
-    "This is the section in which you describe the main findings or achievements of your model. You can report things like accuracies on train/test data, loss scores, comparisons to previous models, etc. To compare a small set of numbers, tables are fine, but more complex phenomena should be illustrated with figures. Both figures and tables should include appropriate captions, axis labels, legends, and another professional annotations. It’s fine for your figures to either be constructed manually or as computational outputs (e.g. from Pandas).\n",
-    "\n",
-    "Please remember: your results do not speak for themselves. While figures and tables are highly effective forms of communication, your prose is necessary to tell your story."
+    "We were able to complete our goal of making projections for all fantasy players this upcoming season. Sadly, ESPN and other reputable fantasy football sites do not have their performance projections for previous years avaiable to use. Significantly, we wanted to compare our model's performance against highly used fantasy football projections. Because we were not able to compare our model to other models, it is hard to see whether our model truly performed well. However, we visualized our final testing data for the 2022 year and compared our models projections to the players actual performance. In our pandas tables shown in our source code, it is apparent that our model did a sufficient job at predicting the performance of many players. We were also able to get the average difference between our projection and the players actual performance in 2022. This was a clear sign to us that the model was performing well because for our rookie WR's, our projections were on average less than 2 points off, QB's were on average about 6 points off, TE's were on average less than 1.5 points off, and RB's were on average about 3 points off. In the context of fantasy football, for players that have no previous data in the league, our model is able to give us reasonably accurate projections that many of these big sites often get wrong."
    ]
   },
   {
@@ -528,7 +519,11 @@
     "\n",
     "<u>Johnny Kantaros</u>:  \n",
     "\n",
-    "I spent time initially working on data collection (including the web-scraping), and then spent a lot of time on data cleaning and preprocessing tactics. A large portion of this project was data collection, manipulation, and wrangling, and I definitely learned a lot about the various functionalities of Pandas and other frameworks. Finally, I helped Ethan with adding some models to our modeling function. Our team did a great job working collaboratively so everyone achieved learning in all parts of the pipeline. In terms of this blog post, I wrote the introduction, values statements, and part of the materials + methods sections."
+    "I spent time initially working on data collection (including the web-scraping), and then spent a lot of time on data cleaning and preprocessing tactics. A large portion of this project was data collection, manipulation, and wrangling, and I definitely learned a lot about the various functionalities of Pandas and other frameworks. Finally, I helped Ethan with adding some models to our modeling function. Our team did a great job working collaboratively so everyone achieved learning in all parts of the pipeline. In terms of this blog post, I wrote the introduction, values statements, and part of the materials + methods sections.\n",
+    "\n",
+    "<u>Dean Smith</u>:\n",
+    "\n",
+    "I spent most of my time focusing on the rookie data. A big part of this project was how we would predict scores for rookies who have had no prior data in the league. We concluded that using draft data and team data from the year prior would be the best way to estimate how a rookie would be utilized by their team. Once I gathered and cleaned the data for rookies, my time was spent developing the funciton for feature selection along with integrating the Multi-Layered Perceptron into the model selection. For the blog post, I took charge in writing the Modeling, Performance Evaluation, and Results sections of the blog post."
    ]
   },
   {
